--- a/.eslintrc
+++ b/.eslintrc
@@ -248,6 +248,9 @@
 
     "quote-props": [2, "consistent-as-needed"], // http://eslint.org/docs/rules/quote-props
 
+    // "no-console": 2, // http://eslint.org/docs/rules/no-console
+
+
 
 
     /**
